<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <Button
        android:id="@+id/buttonReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/button_Report" />

    <DatePicker
        android:id="@+id/Datefrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Dateto"
        android:layout_centerHorizontal="true"
        android:calendarViewShown="false"
        android:scaleX="0.7"
        android:scaleY="0.7" />

    <DatePicker
        android:id="@+id/Dateto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Datefrom"
        android:layout_centerVertical="true"
        android:calendarViewShown="false"
        android:scaleX="0.7"
        android:scaleY="0.7" />

    <CheckBox
        android:id="@+id/checkBoxSpending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/checkBoxCashFlow"
        android:layout_alignParentLeft="true"
        android:text="@string/checkbox_spending" />

    <CheckBox
        android:id="@+id/checkBoxCashFlow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonReport"
        android:layout_alignRight="@+id/Datefrom"
        android:layout_marginBottom="18dp"
        android:text="@string/checkbox_cashflow" />

    <CheckBox
        android:id="@+id/checkAccountsListing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/checkBoxSpending"
        android:layout_alignParentLeft="true"
        android:text="@string/checkbox_accountslisting" />

    <CheckBox
        android:id="@+id/checkBoxIncome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkAccountsListing"
        android:layout_alignBottom="@+id/checkAccountsListing"
        android:layout_alignLeft="@+id/checkBoxCashFlow"
        android:text="@string/checkbox_income" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Datefrom"
        android:layout_toLeftOf="@+id/checkBoxIncome"
        android:text="@string/start_date" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Datefrom"
        android:layout_centerHorizontal="true"
        android:text="@string/end_date" />

</RelativeLayout>