<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".LoginOrSignupActivity" >

	<Button
	    android:id="@+id/login_button"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/signup_button"
	    android:layout_centerHorizontal="true"
	    android:text="@string/login_button_label" />

	<Button
	    android:id="@+id/signup_button"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/login_button"
	    android:layout_alignParentBottom="true"
	    android:text="@string/signup_button_label" />

	<ImageView
	    android:id="@+id/imageView1"
	    android:layout_width="200dip"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="118dp"
	    android:contentDescription="@string/logo"
	    android:src="@drawable/wallt" />

</RelativeLayout>